AB#205909: Fixed overflow in story highlight to work with brand border, fixed double padding

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/story-highlight/_story_highlight.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/story-highlight/_story_highlight.scss
@@ -16,6 +16,11 @@
     }
   }
 
+  &__content {
+    position: relative;
+    overflow: hidden;
+  }
+
   .white-background {
     background-color: #fff;
     position: absolute;
@@ -297,7 +302,10 @@
   & .cta_wrapper {
     padding: 8.3rem 0;
     text-align: center;
-    padding: 3.3rem 0 12.6rem 0;
+
+    @include small {
+      padding: 3.3rem 0 12.6rem 0;
+    }
 
     @include medium {
       padding: 0 0 12.6rem 0;
